# K-NN

./: CHANGELOG.md  K-NN.cabal  Main.hs  README-en.md  README.md
.github/workflows/: haskell.yml
data/: eredivisie.csv  europeanFootball.csv  la-liga.csv  liga-nos.csv  ligue-1.csv  premier-league.csv
data/europeanFootball/: classified.csv  evaluation.csv  unclassified-met.csv  unclassified-pie.csv
data/europeanFootball/classification/: evaluation.csv  unclassified.csv
data/football/: evaluation.csv
data/football/regression/: input-european.csv  input-stadium.csv
src/: Classifier.hs  Evaluation.hs  Input.hs  KNN.hs  LeagueClassifier.hs  Liga.hs  LigaClassifier.hs  Main.hs  Parsing.hs  Prediction.hs
src/Evaluation/: Classification.hs  Regression.hs
tests/: Tests.hs
tests/TestCases/: TestClassificationEvaluation.hs  TestParsing.hs  TestRegressionEvaluation.hs
