cabal-version:       >= 1.10
name:                K-NN
version:             0.1.0
synopsis:            K-Nearest Neighbours Algorithm
bug-reports:         https://github.com/TheLusitanianKing/K-NN/issues
license:             MIT
license-file:        LICENSE
author:              The Lusitanian King
maintainer:          alexlusitanian@gmail.com
category:            Machine Learning
build-type:          Simple
extra-source-files:  README.md

executable k-nn
  main-is: Main.hs
  build-depends:
    base >= 4.13,
    text >= 1.2.4,
    k-nn-lib
  ghc-options: -Wall
  default-language: Haskell2010

library k-nn-lib
  exposed-modules:
    Evaluation.Classification,
    Evaluation.Regression,
    Input,
    KNN,
    Parsing,
    Prediction
  hs-source-dirs:
    src
  ghc-options: -Wall
  build-depends:
    base >= 4.13,
    text >= 1.2.4
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs:
    tests, tests/TestCases
  other-modules:
    TestClassificationEvaluation,
    TestParsing,
    TestRegressionEvaluation
  build-depends:
    base >= 4.13,
    QuickCheck >= 2.14.2,
    hspec >= 2.7.4,
    text >= 1.2.4,
    k-nn-lib
  default-language: Haskell2010
